@startuml

skinparam classBorderColor #516f42
skinparam classBackgroundColor #a3dc7f
skinparam shadowing false

package phpDocumentor {
    class Analyzer
    class Configuration
    class Fileset\Collection

    package Parser {
        class Parser {
            - $strategies
            + __construct(Analyzer $analyzer)
            + parse(Fileset\Collection $files, Configuration $configuration)
        }

        interface Handler {
          + matches(SplFileInfo $file)
          + boot(Configuration $configuration)
          + parse(SplFileObject $file)
        }

        class Handler\Php {
            + __construct(Analyzer $analyzer)
        }

        class Handler\ReferenceDocumentation {
            + __construct(Analyzer $analyzer)
        }

        "Analyzer" --> "Parser"
        "Configuration" --> "Parser"
        "Fileset\Collection" --> "Parser"
        "Parser" --> "Handler"
        "Handler" <|.. "Handler\Php"
        "Handler" <|.. "Handler\ReferenceDocumentation"
        "Analyzer" -----> "Handler\Php"
        "Analyzer" -----> "Handler\ReferenceDocumentation"
    }
}

@enduml
